# Codex_project

./: CMakeLists.txt  README.md  arhivwindow.cpp  arhivwindow.h  arhivwindow.ui  articleform.cpp  articleform.h  articleform.ui  dialog_dez.cpp  dialog_dez.h  dialog_dez.ui  dialogarhiv.cpp  dialogarhiv.h  dialogarhiv.ui  form.ui  form_dez.cpp  form_dez.h  form_dez.ui  form_vvod.cpp  form_vvod.h  form_vvod.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtableviewprinter.h  tableprinter.cpp  tableprinter.h
database/: codex.sqlite
